# rpa

./: .gitignore  CLAUDE.md  Makefile  README.md  dataset_split.json  dataset_split_gcs.json  pyproject.toml
notebooks/: dataset_exploration.ipynb
scripts/: download_model.sh  fix_paths.py  train_remote.sh  upload.sh
src/rpa/: augment.py  dataset_split.py  inference.py  process_runners.py  train.py  transform.py
terraform/: .gitignore  main.tf  startup.sh  variables.tf
